fix overlap selector lang and currency

--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -269,17 +269,13 @@
   .localization-form:only-child {
     justify-content: start;
     width: auto;
-    margin: 0 0 0 var(--inputs-border-width);
+    margin: 0 0 0 -1rem;
   }
 
   .localization-form:only-child .button,
   .localization-form:only-child .localization-form__select {
     margin: 1rem;
   }
-}
-
-.localization-form .disclosure {
-  margin-top: var(--inputs-border-width);
 }
 
 @media screen and (max-width: 989px) {
@@ -304,19 +300,34 @@
 }
 
 .localization-form__select {
+  border-radius: calc(var(--inputs-border-width) + var(--inputs-radius));
   position: relative;
   margin-bottom: 1.5rem;
-  border: 0.1rem solid transparent;
   padding-left: 1rem;
   text-align: left;
+  min-height: calc(4rem + var(--inputs-border-width) * 2);
+  min-width: calc(7rem + var(--inputs-border-width) * 2);
+}
+
+.disclosure__button.localization-form__select {
+  padding: 4rem;
+}
+
+.localization-form__select:before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  border-radius: calc(var(--inputs-border-width) + var(--inputs-radius));
+  box-shadow: var(--inputs-shadow-horizontal-offset) var(--inputs-shadow-vertical-offset) var(--inputs-shadow-blur-radius) rgba(var(--color-base-text), var(--inputs-shadow-opacity));
+}
+
+.localization-form__select:after {
+  content: '';
+  position: absolute;
+  inset: var(--inputs-border-width);
+  border: 0.1rem solid transparent;
   border-radius: var(--inputs-radius);
-  box-shadow: 0 0 0 var(--inputs-border-width) rgba(var(--color-foreground),var(--inputs-border-opacity));
-  filter: drop-shadow(
-    var(--inputs-shadow-horizontal-offset)
-    var(--inputs-shadow-vertical-offset)
-    var(--inputs-shadow-blur-radius)
-    rgba(var(--color-foreground), var(--inputs-shadow-opacity))
-  );
+  box-shadow: 0 0 0 var(--inputs-border-width) rgba(var(--color-foreground),var(--inputs-border-opacity)); 
 }
 
 noscript .localization-form__select {
@@ -333,7 +344,7 @@ noscript .localization-form__select {
   position: absolute;
   content: '';
   height: 0.6rem;
-  right: 1.5rem;
+  right: calc(var(--inputs-border-width) + 0.5rem);
   top: calc(50% - 0.2rem);
 }
 
